Fix the api